# aperate

./: CLAUDE.md  pyproject.toml
aperate/: __init__.py  cli.py  example_config.toml
aperate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aperate/commands/: __init__.py  detect.py  homogenize.py  init.py  photometry.py  postprocess.py  psf.py  refresh.py
aperate/config/: images.py  parser.py  psfs.py  schema.py
aperate/core/: catalog.py  discovery.py  homogenize.py  logging.py  state.py
aperate/utils/: helpers.py
