[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aperate"
version = "0.1.0"
description = "A Python package for creating catalogs from JWST+HST images"
authors = [{name = "Hollis Akins", email = "hollis.akins@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "astropy>=5.0.0",
    "sep>=1.2.0",
    "photutils>=1.5.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
]

[project.scripts]
aperate = "aperate.cli:main"

[tool.setuptools.packages.find]
include = ["aperate*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=aperate"